fix: Dialog font size was too large (sequry/template#19)

--- a/bin/js/controls/password/PasswordCreate.css
+++ b/bin/js/controls/password/PasswordCreate.css
@@ -44,6 +44,7 @@
     min-width: 100%;
     padding: 10px;
     width: calc(100% + 40px);
+    font-size: 0.9rem;
 }
 
 /***************/
